AdKi: fixed horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -222,7 +222,7 @@
 }
 #u158-24{
     z-index:5;
-    width:1400px;
+    width:1300px;
     min-height:419px;
     background-color:transparent;
     position:relative;
